SRV1Console with working ZigZag and Random buttons ---Need to add multi-thread functionality -------Console stops fetching camera when Random/ZigZag command is selected Code for buttons was placed directly in SRV1Console.java, later I want to add code to different java files

--- a/SRV1Console/srv.config
+++ b/SRV1Console/srv.config
@@ -70,6 +70,15 @@ command.23=47
 button.24=buttons/160.png
 command.24=61
 
+button.25=buttons/ZigZag.png
+command.25=1234
+
+button.26=buttons/blank.png
+command.27=5678
+
+button.27=buttons/Random.png
+command.27=5678
+
 comport=Network
 button.columns=6
 wcs.server=localhost
