--- a/SRV1Console/cameras.db.properties
+++ b/SRV1Console/cameras.db.properties
@@ -1,5 +1,5 @@
 #HSQL database
-#Mon Oct 22 10:02:35 PDT 2012
+#Sun Nov 11 16:42:28 PST 2012
 sql.strict_fk=true
 readonly=false
 sql.strong_fk=true
